--- a/source/html/contact.html
+++ b/source/html/contact.html
@@ -5,7 +5,7 @@
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>Email</h3>
-					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
+					[my_first_name] [dot] [my_last_name] [at] snu.ac.kr
 				</li>
 			</ul>
 		</div>
@@ -32,11 +32,15 @@
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>Office</h3>
-					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
-					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
+					401 Ho, 301 Dong, 1 Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea (Zip: 08826)<br>
+					(in Korean) 대한민국 서울특별시 관악구 관악로 1, 301동 401호 (우: 08826)<br>
 				</li>
 				<li class="list-group-item">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.6586229797967!2d129.32099752385267!3d36.01254565132359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d5bd6bfb23%3A0x471a066a5e57ed04!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCcMuqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1566448360900!5m2!1sen!2skr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.6586229797967!2d129.32099752385267!3d36.01254565132359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d5bd6bfb23%3A0x471a066a5e57ed04!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCcMuqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1566448360900!5m2!1sen!2sk5r" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+					<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101358.46391930878!2d126.80830754335939!3d37.45004859999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b60073e950585%3A0x1f19b9531c12968c!2z7ISc7Jq464yA7ZWZ6rWQIDMwMeuPmSDqs7Xqs7zrjIDtlZkg7KCcMeqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1691425786736!5m2!1sen!2skr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101358.47238112519!2d126.80829763412476!3d37.45004235503616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b60073e950585%3A0x1f19b9531c12968c!2z7ISc7Jq464yA7ZWZ6rWQIDMwMeuPmSDqs7Xqs7zrjIDtlZkg7KCcMeqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1691425970511!5m2!1sen!2skr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3167.4455068468183!2d126.94738544144364!3d37.45020188599011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b60073e950585%3A0x1f19b9531c12968c!2z7ISc7Jq464yA7ZWZ6rWQIDMwMeuPmSDqs7Xqs7zrjIDtlZkg7KCcMeqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1691426435818!5m2!1sen!2skr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1583.7388927486807!2d126.9504646174327!3d37.44943957200188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b60073e950585%3A0x1f19b9531c12968c!2z7ISc7Jq464yA7ZWZ6rWQIDMwMeuPmSDqs7Xqs7zrjIDtlZkg7KCcMeqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1691426494724!5m2!1sen!2skr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</li>
 			</ul>
 		</div>
