--- a/publications.html
+++ b/publications.html
@@ -120,6 +120,32 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-lg-4 text-center" id="Kumar_HighSpeed_RA-L_2023">
+			<img src="publications/data/23_ral.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>High-Speed Stereo Visual SLAM For Low-Powered Computing Devices</h4>
+			<p class="text-muted">
+				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
+				<em>IEEE Robotics and Automation Letters (<b>RA-L</b>), 2023</em>
+			</p>
+			<p>
+				<a href="https://github.com/ashishkumar822/Jetson-SLAM" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_HighSpeed_RA-L_2023_bibtex_button" aria-expanded="false" aria-controls="Kumar_HighSpeed_RA-L_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_HighSpeed_RA-L_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kumar_HighSpeed_RA-L_2023,<br>
+							Title={High-Speed Stereo Visual SLAM For Low-Powered Computing Devices},<br>
+							Author={Ashish Kumar and Jaesik Park and Laxmidhar Behera},<br>
+							Journal={IEEE Robotics and Automation Letters (RA-L)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_FillUp_arXiv_2023">
 			<img src="publications/data/23_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Fill-Up: Balancing Long-Tailed Data with Generative Models</h4>
