--- a/data/news.html
+++ b/data/news.html
@@ -1,5 +1,5 @@
-2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
-2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
+2023.09. After spending four great years at POSTECH, I joined <a href="https://en.snu.ac.kr/">Seoul National University</a> as an Assistant Professor.
+2023.08. A <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
 2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
 2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
