--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Jaesik Park is an Associate Professor at <a href="https://postech.ac.kr/eng/" ta
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2023.08. A <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
+					2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
 				</li>
 				<li class="list-group-item">
 					2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
