--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
 2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
 2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
 2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
