--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Jaesik Park is an Associate Professor at <a href="https://postech.ac.kr/eng/" ta
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
+				</li>
+				<li class="list-group-item">
 					2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@ Jaesik Park is an Associate Professor at <a href="https://postech.ac.kr/eng/" ta
 				<li class="list-group-item">
 					2023.03. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.17.0"><b>Open3D v0.17</b></a> - Open3D meets Mitsuba. Receives 8.3+1.2k GitHub stars.
 				</li>
-				<li class="list-group-item">
-					2023.02. Papers about <a href="publications.html#Kang_Scaling_CVPR_2023">GAN based text-to-image synthesis</a> and <a href="publications.html#Ryu_Instant_CVPR_2023">robust LiDAR perception</a> are accepted to <b>CVPR 2023</b>.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@ Jaesik Park is an Associate Professor at <a href="https://postech.ac.kr/eng/" ta
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.02. Papers about <a href="publications.html#Kang_Scaling_CVPR_2023">GAN based text-to-image synthesis</a> and <a href="publications.html#Ryu_Instant_CVPR_2023">robust LiDAR perception</a> are accepted to <b>CVPR 2023</b>.
+					</li>
 					<li class="list-group-item">
 						2023.02. I will serve as an Area Chair for <b>NeurIPS 2023</b>.
 					</li>
