--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -1,13 +1,6 @@
-<!-- Source -->
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Members</h3>
-		<div class="col-md-3 text-center">
-			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Jaesung Choe</h5>
-			Postdoctoral researcher<br>
-			Ph.D. KAIST
-		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
@@ -15,34 +8,16 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Junha Lee</h5>
-			2021 Fall<br>
-			Ph.D. student
-		</div>
-		<div class="col-md-3 text-center">
-			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>MinGuk Kang</h5>
-			2020 Spring<br>
-			Integrated Ph.D. Student
-		</div>
-		<div class="col-md-3 text-center">
-			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Chunghyun Park</h5>
-			2022 Spring<br>
-			Ph.D. student
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
-			2023 Spring<br>
+			2023 Fall<br>
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Seungjoo Shin</h5>
-			2021 Fall<br>
-			Master student
+			<img src="source/members/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seunguk Do</h5>
+			2023 Fall<br>
+			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
@@ -51,34 +26,22 @@
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Seunguk Do</h5>
-			2022 Spring<br>
-			Master student
-		</div>
-		<div class="col-md-3 text-center">
-			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Seoyeon Kim</h5>
-			2022 Fall<br>
-			Master student
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Pierre E. MUSACCHIO</h5>
-			2022 Fall<br>
-			Master student
+			2023 Fall<br>
+			Integrated Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Joonghyuk Shin</h5>
-			2023 Spring<br>
-			Master student
+			2023 Fall<br>
+			Integrated Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinmo Kim</h5>
-			2023 Spring<br>
-			Master student
+			2023 Fall<br>
+			Integrated Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
@@ -91,6 +54,42 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Past members</h3>
+		<div class="col-md-2 text-center">
+			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jaesung Choe</h5>
+			2023 Summer<br>
+			Nvidia
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Junha Lee</h5>
+			2021 Fall<br>
+			Ph.D. student at POSTECH
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Chunghyun Park</h5>
+			2022 Spring<br>
+			Ph.D. student at POSTECH
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>MinGuk Kang</h5>
+			2020 Spring<br>
+			Integrated Ph.D. student at POSTECH
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seungjoo Shin</h5>
+			2023 Fall<br>
+			Ph.D. student at POSTECH
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seoyeon Kim</h5>
+			2022 Fall<br>
+			Master student at POSTECH
+		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinoh Cho</h5>
@@ -126,43 +125,5 @@
 			Master degree<br>
 			LG AI Research
 		</div>
-	</div>
-</div>
-<div class="container mt-4">
-	<div class="row gx-4 gy-4">
-		<h3>Undergraduate Students (selected)</h3>
-		<div class="col-md-3 text-center">
-			<h5>Juyong Lee</h5>
-			Student at POSTECH<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Vansh Gupta</h5>
-			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Jinmo Kim</h5>
-			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Seoyoung Choi</h5>
-			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Pierre E. MUSACCHIO</h5>
-			École Nationale Supérieure de Cognitique (exchange student at POSTECH)<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Hansheng Guo</h5>
-			The Chinese University of Hong Kong (exchange student at POSTECH) 2021<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Seoyeon Kim</h5>
-			Selected as the best research project (과제연구 최우수상) 2021.07<br>
-		</div>
-		<div class="col-md-3 text-center">
-			<h5>Joonghyuk Shin</h5>
-			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
-			Selected as the best undergraduate research participation (최우수 연구참여 II) 2022.12<br>
-		</div>		
 	</div>
 </div>
