--- a/index.html
+++ b/index.html
@@ -59,17 +59,13 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-<<<<<<< HEAD
+					2023.09. After spending four great years at POSTECH, I joined <a href="https://cse.snu.ac.kr/">CSE</a> & <a href="https://gsai.snu.ac.kr/">GSAI</a> at <a href="https://en.snu.ac.kr/">Seoul National University</a>.
+				</li>
+				<li class="list-group-item">
 					2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
 				</li>
 				<li class="list-group-item">
 					2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
-=======
-					2023.09. After spending four great years at POSTECH, I joined <a href="https://en.snu.ac.kr/">Seoul National University</a> as an Assistant Professor.
-				</li>
-				<li class="list-group-item">
-					2023.08. A <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
->>>>>>> snu
 				</li>
 				<li class="list-group-item">
 					2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
@@ -83,9 +79,6 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 				<li class="list-group-item">
 					2023.04. A paper about recovering <a href="publications.html#Kim_Stable_ICML_2023">3D characteristic orientation</a> is accepted to <b>ICML 2023</b>.
 				</li>
-				<li class="list-group-item">
-					2023.03. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.17.0"><b>Open3D v0.17</b></a> - Open3D meets Mitsuba. Receives 8.3+1.2k GitHub stars.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -94,6 +87,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.03. Launching <a href="https://github.com/isl-org/Open3D/releases/tag/v0.17.0"><b>Open3D v0.17</b></a> - Open3D meets Mitsuba. Receives 8.3+1.2k GitHub stars.
+					</li>
 					<li class="list-group-item">
 						2023.02. Papers about <a href="publications.html#Kang_Scaling_CVPR_2023">GAN based text-to-image synthesis</a> and <a href="publications.html#Ryu_Instant_CVPR_2023">robust LiDAR perception</a> are accepted to <b>CVPR 2023</b>.
 					</li>
