--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2023.09. After spending four great years at POSTECH, I joined <a href="https://cse.snu.ac.kr/">CSE</a> & <a href="https://gsai.snu.ac.kr/">GSAI</a> at <a href="https://en.snu.ac.kr/">Seoul National University</a>.
+					2023.09. After spending four and half great years at POSTECH, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
 				</li>
 				<li class="list-group-item">
 					2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
