--- a/publications.html
+++ b/publications.html
@@ -97,7 +97,7 @@
 		</div>
 		<div class="col-lg-4 text-center" id="Choe_Spacetime_ICCV_2023">
 			<img src="publications/data/23_iccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Spacetime Surface Regularization for Neural Scene Reconstruction</h4>
+			<h4 class="em-tight">Spacetime Surface Regularization for Neural Dynamic Scene Reconstruction</h4>
 			<p class="text-muted">
 				Jaesung Choe, Christopher Choy, <b>Jaesik Park</b>, In So Kweon, and Animashree Anandkumar.
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2023</em>
@@ -110,7 +110,7 @@
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Choe_Spacetime_ICCV_2023,<br>
-							Title={Spacetime Surface Regularization for Neural Scene Reconstruction},<br>
+							Title={Spacetime Surface Regularization for Neural Dynamic Scene Reconstruction},<br>
 							Author={Jaesung Choe and Christopher Choy and Jaesik Park and In So Kweon and Animashree Anandkumar},<br>
 							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
 							Year={2023}<br>
