minor index update

--- a/data/news.html
+++ b/data/news.html
@@ -1,5 +1,5 @@
 2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> was featured at <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
-2023.09. After spending four and half great years at POSTECH, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
+2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
 2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
 2023.08. Our <a href="publications.html#Kang_StudioGAN_TPAMI_2023">StudioGAN paper</a> is accepted to <b>TPAMI</b> (with 3.2k GitHub stars).
 2023.07. A paper about <a href="publications.html#Choe_Spacetime_ICCV_2023">neural dynamic scene reconstruction</a> is accepted to <b>ICCV 2023</b>.
