--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 					2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> was featured at <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
 				</li>
 				<li class="list-group-item">
-					2023.09. After spending four and half great years at POSTECH, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
+					2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
 				</li>
 				<li class="list-group-item">
 					2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
