--- a/lab.html
+++ b/lab.html
@@ -88,6 +88,12 @@
 			Integrated Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
+			<img src="source/members/haebeom.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Haebeom Jung</h5>
+			2023 Fall<br>
+			Integrated Ph.D. student
+		</div>
+		<div class="col-md-3 text-center">
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Daneul Kim</h5>
 			2023 Fall<br>
