--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -64,7 +64,8 @@
 			<img src="source/members/jaesung.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaesung Choe</h5>
 			2023 Summer<br>
-			Nvidia
+			Post Doc. Researcher<br>
+			Now at Nvidia
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
