--- a/lab.html
+++ b/lab.html
@@ -79,13 +79,15 @@
 			<img src="source/members/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Joonghyuk Shin</h5>
 			2023 Fall<br>
-			Integrated Ph.D. student
+			Integrated Ph.D. student<br>
+			<a href="https://joonghyuk.com/" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinmo Kim</h5>
 			2023 Fall<br>
-			Integrated Ph.D. student
+			Integrated Ph.D. student<br>
+			<a href="https://jinmo.kim" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/haebeom.jpg" class="rounded-circle img-thumbnail shadow mb-2">
@@ -97,7 +99,8 @@
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Daneul Kim</h5>
 			2023 Fall<br>
-			Master student
+			Master student<br>
+			<a href="https://carpedkm.github.io/" target="_blank">Homepage</a>
 		</div>
 	</div>
 </div>
