--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
+				</li>
+				<li class="list-group-item">
 					2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> has been featured in <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 				<li class="list-group-item">
 					2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 				</li>
-				<li class="list-group-item">
-					2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2023.05. I will serve as a Technical Papers Committee for <b>SIGGRAPH ASIA 2023</b>.
+					</li>
 					<li class="list-group-item">
 						2023.04. A paper about recovering <a href="publications.html#Kim_Stable_ICML_2023">3D characteristic orientation</a> is accepted to <b>ICML 2023</b>.
 					</li>
