--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Shin_Binary_NeurIPS_2023">
+			<img src="publications/data/23_neurips.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Binary Radiance Fields</h4>
+			<p class="text-muted">
+				Seungjoo Shin and <b>Jaesik Park</b>.
+				<em>Conf. on Neural Information Processing Systems (<b>NeurIPS</b>), 2023</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2306.07581" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Binary_NeurIPS_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Binary_NeurIPS_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Binary_NeurIPS_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Shin_Binary_NeurIPS_2023,<br>
+							Title={Binary Radiance Fields},<br>
+							Author={Seungjoo Shin and Jaesik Park},<br>
+							Booktitle={Proceedings of the Conf. on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kang_StudioGAN_TPAMI_2023">
 			<img src="publications/data/22_studio_gan.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis</h4>
@@ -140,32 +166,6 @@
 							Title={Fill-Up: Balancing Long-Tailed Data with Generative Models},<br>
 							Author={Joonghyuk Shin and Minguk Kang and Jaesik Park},<br>
 							Journal={2306.07200 (arXiv)},<br>
-							Year={2023}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Shin_Binary_arXiv_2023">
-			<img src="publications/data/23_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Binary Radiance Fields</h4>
-			<p class="text-muted">
-				Seungjoo Shin and <b>Jaesik Park</b>.
-				<em>2306.07581 (arXiv), 2023</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2306.07581" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Binary_arXiv_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Binary_arXiv_2023_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Shin_Binary_arXiv_2023_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Shin_Binary_arXiv_2023,<br>
-							Title={Binary Radiance Fields},<br>
-							Author={Seungjoo Shin and Jaesik Park},<br>
-							Journal={2306.07581 (arXiv)},<br>
 							Year={2023}<br>
 							}
 						</p>
