main page update

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am leading <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> at Seoul National University. I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a>, and he received his Master’s degree and Ph.D. degree from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, advised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Dr. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>. He was a research scientist at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab. led by <a href="http://vladlen.info/" target="_blank">Dr. Vladlen Koltun</a>, and he co-created the <a href="http://open3d.org/" target="_blank">Open3D library</a>. Before joining Seoul National University, he was a faculty member at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. His research interests include <a href="https://jaesik.info/publications#Kang_Scaling_CVPR_2023">image synthesis</a>, <a href="https://jaesik.info/publications#Park_Fast_CVPR_2022">3D perception</a>, and computer vision topics. He serves as a program committee at prestigious computer vision conferences, such as ICCV, CVPR, and ECCV.				</li>
 				<li class="list-group-item">
 					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
+					<a href="https://drive.google.com/file/d/1DHbyCBfwJAb6PwsYOWnYXSlUvnyxtM5o/view?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 				</li>
 			</ul>
 			<h2>News</h2>
