--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -12,11 +12,12 @@
 			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am leading <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> at Seoul National University. I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 					<!-- AUTOGEN::Bio -->
 				</li>
 				<li class="list-group-item">
 					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
+					<a href="https://drive.google.com/file/d/1DHbyCBfwJAb6PwsYOWnYXSlUvnyxtM5o/view?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 				</li>
 			</ul>
 			<h2>News</h2>
