--- a/publications.html
+++ b/publications.html
@@ -129,6 +129,7 @@
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2023</em>
 			</p>
 			<p>
+				<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Choe_Spacetime_Surface_Regularization_for_Neural_Dynamic_Scene_Reconstruction_ICCV_2023_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_Spacetime_ICCV_2023_bibtex_button" aria-expanded="false" aria-controls="Choe_Spacetime_ICCV_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Choe_Spacetime_ICCV_2023_bibtex_button">
