--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,31 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kumar_HighSpeed_RAL_2023">
+			<img src="publications/data/23_ral.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>High-Speed Stereo Visual SLAM for Low-Powered Computing Devices</h4>
+			<p class="text-muted">
+				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
+				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), 2023</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_HighSpeed_RAL_2023_bibtex_button" aria-expanded="false" aria-controls="Kumar_HighSpeed_RAL_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kumar_HighSpeed_RAL_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kumar_HighSpeed_RAL_2023,<br>
+							Title={High-Speed Stereo Visual SLAM for Low-Powered Computing Devices},<br>
+							Author={Ashish Kumar and Jaesik Park and Laxmidhar Behera},<br>
+							Journal={IEEE Robotics and Automation Letters (RAL)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_Binary_NeurIPS_2023">
 			<img src="publications/data/23_neurips.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Binary Radiance Fields</h4>
