--- a/lab.html
+++ b/lab.html
@@ -102,6 +102,25 @@
 			Master student<br>
 			<a href="https://carpedkm.github.io/" target="_blank">Homepage</a>
 		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/hyunjoon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>HyunJoon Lee</h5>
+			2024 Spring<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jaeah Lee</h5>
+			2024 Spring<br>
+			Integrated Ph.D. student<br>
+			<a href="https://github.com/hayanz" target="_blank">Homepage</a>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Sangmin Kim</h5>
+			2024 Spring<br>
+			Integrated Ph.D. student<br>
+		</div>
 	</div>
 </div>
 <div class="container mt-4">
