--- a/lab.html
+++ b/lab.html
@@ -117,7 +117,7 @@
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Sangmin Kim</h5>
+			<h5>Sang Min Kim</h5>
 			2024 Spring<br>
 			Integrated Ph.D. student<br>
 		</div>
