--- a/lab.html
+++ b/lab.html
@@ -136,65 +136,65 @@
 		<div class="col-md-2 text-center">
 			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Junha Lee</h5>
-			2021 Fall<br>
+			2021 Fall - current<br>
 			Ph.D. student at POSTECH
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Chunghyun Park</h5>
-			2022 Spring<br>
+			2022 Spring - current<br>
 			Ph.D. student at POSTECH
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>MinGuk Kang</h5>
-			2020 Spring<br>
+			2020 Spring - current<br>
 			Integrated Ph.D. student at POSTECH
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seungjoo Shin</h5>
-			2023 Fall<br>
+			2021 Fall - 2023 Spring<br>
 			Ph.D. student at POSTECH
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seoyeon Kim</h5>
-			2022 Fall<br>
+			2022 Fall - current<br>
 			Master student at POSTECH
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinoh Cho</h5>
-			2023 Spring<br>
+			2020 Fall - 2022 Fall<br>
 			Master degree<br>
 			Pursuing Ph.D.
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
-			2023 Spring<br>
+			2020 Fall - 2022 Fall<br>
 			Master degree<br>
 			Qualcomm Korea
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jiye Kim</h5>
-			2023 Spring<br>
+			2021 Spring - 2022 Fall<br>
 			Master degree<br>
 			LG AI Research
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
-			2021 Fall<br>
+			2019 Fall - 2021 Fall<br>
 			Master degree<br>
 			Playtag
 		</div>		
 		<div class="col-md-2 text-center">
 			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
-			2021 Spring<br>
+			2019 Fall - 2021 Spring<br>
 			Master degree<br>
 			LG AI Research
 		</div>
