--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -23,7 +23,7 @@
 			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Dongmin You</h5>
 			2022 Spring<br>
-			Master student
+			MS student
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
@@ -55,7 +55,7 @@
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Daneul Kim</h5>
 			2023 Fall<br>
-			Master student<br>
+			MS student<br>
 			<a href="https://carpedkm.github.io/" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
@@ -87,72 +87,78 @@
 			<h5>Jaesung Choe</h5>
 			2023 Summer<br>
 			Post Doc. Researcher<br>
-			Now at Nvidia
-		</div>
-		<div class="col-md-2 text-center">
-			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Junha Lee</h5>
-			2021 Fall - current<br>
-			Ph.D. student at POSTECH
-		</div>
-		<div class="col-md-2 text-center">
-			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Chunghyun Park</h5>
-			2022 Spring - current<br>
-			Ph.D. student at POSTECH
-		</div>
-		<div class="col-md-2 text-center">
-			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>MinGuk Kang</h5>
-			2020 Spring - current<br>
-			Integrated Ph.D. student at POSTECH
-		</div>
-		<div class="col-md-2 text-center">
-			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Seungjoo Shin</h5>
-			2021 Fall - 2023 Spring<br>
-			Ph.D. student at POSTECH
+			Nvidia
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seoyeon Kim</h5>
-			2022 Fall - current<br>
-			Master student at POSTECH
+			2022F - current<br>
+			MS student (POSTECH)
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seungjoo Shin</h5>
+			2021F - 2023S<br>
+			MS (POSTECH)<br>
+			2023 Fall - current<br>
+			Ph.D. student (POSTECH)
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jiye Kim</h5>
+			2021S - 2022F<br>
+			MS degree (POSTECH)<br>
+			LG AI Research
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinoh Cho</h5>
-			2020 Fall - 2022 Fall<br>
-			Master degree<br>
+			2020F - 2022F<br>
+			MS degree (POSTECH)<br>
 			Pursuing Ph.D.
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
-			2020 Fall - 2022 Fall<br>
-			Master degree<br>
+			2020F - 2022F<br>
+			MS degree (POSTECH)<br>
 			Qualcomm Korea
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Jiye Kim</h5>
-			2021 Spring - 2022 Fall<br>
-			Master degree<br>
-			LG AI Research
+			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Chunghyun Park</h5>
+			2020S - 2021F<br>
+			MS degree (POSTECH)<br>
+			2022 Spring - current<br>
+			Ph.D. student (POSTECH)
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>MinGuk Kang</h5>
+			2020S - current<br>
+			Integrated Ph.D. student (POSTECH)
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
-			2019 Fall - 2021 Fall<br>
-			Master degree<br>
+			2019F - 2021F<br>
+			MS degree (POSTECH)<br>
 			Playtag
 		</div>		
 		<div class="col-md-2 text-center">
 			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
-			2019 Fall - 2021 Spring<br>
-			Master degree<br>
+			2019F - 2021S<br>
+			MS degree (POSTECH)<br>
 			LG AI Research
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Junha Lee</h5>
+			2019F - 2021S<br>
+			MS degree (POSTECH)<br>
+			2021F - current<br>
+			Ph.D. student (POSTECH)
 		</div>
 	</div>
 </div>
