--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -99,7 +99,7 @@
 			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seungjoo Shin</h5>
 			2021F - 2023S<br>
-			MS (POSTECH)<br>
+			MS degree (POSTECH)<br>
 			2023 Fall - current<br>
 			Ph.D. student (POSTECH)
 		</div>
