adding lab logo

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 		</div>
 		<div class="col-lg-3">
 			<img src="source/members/jaesik_2023.jpg" class="shadow rounded-circle img-thumbnail">
+			<br>
+			<br>
+			<a href="lab.html"><img src="source/images/lab_logo_white.jpeg" class="img-thumbnail"></a>
 		</div>
 		<div class="col-lg-9">
 			<h2>Jaesik Park</h2>
