minor fix in landing page

--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -15,7 +15,7 @@
 			<!-- <h1>Jaesik Park</h1> -->
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am leading <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> at Seoul National University. I am looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
+					<p class="lead">Hello! I am Jaesik Park at Seoul National University. Our research group, namely <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> is looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 					<!-- AUTOGEN::Bio -->
 				</li>
 				<li class="list-group-item">
