--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -1,5 +1,8 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
+		<div class="col-md-12 text-center">
+			<img src="source/lab_pics/2023_10_27.jpeg" class="img-thumbnail shadow mb-2">
+		</div>
 		<h3>Members</h3>
 		<div class="col-md-3 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
