index page update:

--- a/index.html
+++ b/index.html
@@ -50,16 +50,24 @@
 		</div>
 		<div class="col-lg-9">
 			<h2>Jaesik Park</h2>
-			<!-- <h1>Jaesik Park</h1> -->
-			<ul class="list-group mb-4 shadow-sm">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<p class="lead">Hello! I am Jaesik Park at Seoul National University. Our research group, namely <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> is looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
-Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a>, and he received his Master’s degree and Ph.D. degree from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, advised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Dr. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>. He was a research scientist at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab. led by <a href="http://vladlen.info/" target="_blank">Dr. Vladlen Koltun</a>, and he co-created the <a href="http://open3d.org/" target="_blank">Open3D library</a>. Before joining Seoul National University, he was a faculty member at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. His research interests include image synthesis, 3D perception, and computer vision topics. He serves as a program committee at prestigious computer vision conferences, such as ICCV, CVPR, and ECCV.				</li>
-				<li class="list-group-item">
-					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
-					<a href="https://drive.google.com/file/d/1DHbyCBfwJAb6PwsYOWnYXSlUvnyxtM5o/view?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 				</li>
 			</ul>
+			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#bio" aria-expanded="false" aria-controls="bio">
+				Bio and CV &#9661;
+			</button>
+			<div class="collapse" id="bio">
+				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a>, and he received his Master’s degree and Ph.D. degree from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, advised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Dr. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>. He was a research scientist at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab. led by <a href="http://vladlen.info/" target="_blank">Dr. Vladlen Koltun</a>, and he co-created the <a href="http://open3d.org/" target="_blank">Open3D library</a>. Before joining Seoul National University, he was a faculty member at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. His research interests include image synthesis, 3D perception, and computer vision topics. He serves as a program committee at prestigious computer vision conferences, such as ICCV, CVPR, and ECCV.					</li>
+					<li class="list-group-item">
+						<img src = "data/file-down.svg" width="32" height="32"><a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
+					</li>
+				</ul>
+			</div>
+			<p></p>
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
@@ -84,11 +92,9 @@ Jaesik Park is an Assistant Professor at <a href="https://en.snu.ac.kr/" target=
 					2023.05. I will serve as an Area Chair for <b>CVPR 2024</b>.
 				</li>
 			</ul>
-			<p>
-				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
-					Previous &#9661;
-				</button>
-			</p>
+			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
+				Previous &#9661;
+			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
 					<li class="list-group-item">
