--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -12,26 +12,32 @@
 		</div>
 		<div class="col-lg-9">
 			<h2>Jaesik Park</h2>
-			<!-- <h1>Jaesik Park</h1> -->
-			<ul class="list-group mb-4 shadow-sm">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<p class="lead">Hello! I am Jaesik Park at Seoul National University. Our research group, namely <a href="https://jaesik.info/lab">Visual & Geometric Intelligence Lab.</a> is looking for <mark>self-motivated students</mark>. Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
-					<!-- AUTOGEN::Bio -->
-				</li>
-				<li class="list-group-item">
-					<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
-					<a href="https://drive.google.com/file/d/1DHbyCBfwJAb6PwsYOWnYXSlUvnyxtM5o/view?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
 				</li>
 			</ul>
+			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#bio" aria-expanded="false" aria-controls="bio">
+				Bio and CV &#9661;
+			</button>
+			<div class="collapse" id="bio">
+				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						<!-- AUTOGEN::Bio -->
+					</li>
+					<li class="list-group-item">
+						<img src = "data/file-down.svg" width="32" height="32"><a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
+					</li>
+				</ul>
+			</div>
+			<p></p>
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<!-- AUTOGEN::Recent -->
 			</ul>
-			<p>
-				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
-					Previous &#9661;
-				</button>
-			</p>
+			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
+				Previous &#9661;
+			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
 					<!-- AUTOGEN::Others -->
