--- a/lab.html
+++ b/lab.html
@@ -46,6 +46,9 @@
 	<div class="row gx-4 gy-4">
 		<div class="col-md-12 text-center">
 			<img src="source/lab_pics/2023_10_27.jpeg" class="img-thumbnail shadow mb-2">
+			<ul class="list-group shadow-sm">
+				<a href="https://drive.google.com/file/d/1DHbyCBfwJAb6PwsYOWnYXSlUvnyxtM5o/view?usp=sharing" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  lab_introduction.pdf</a>
+			</ul>
 		</div>
 		<h3>Members</h3>
 		<div class="col-md-3 text-center">
