--- a/publications.html
+++ b/publications.html
@@ -75,6 +75,7 @@
 				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), 2023</em>
 			</p>
 			<p>
+				<a href="https://ieeexplore.ieee.org/document/10305271" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kumar_HighSpeed_RAL_2023_bibtex_button" aria-expanded="false" aria-controls="Kumar_HighSpeed_RAL_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kumar_HighSpeed_RAL_2023_bibtex_button">
