--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -8,7 +8,7 @@
 			<img src="source/members/jaesik_2023.jpg" class="shadow rounded-circle img-thumbnail">
 			<br>
 			<br>
-			<a href="lab.html"><img src="source/images/lab_logo_white.jpeg" class="img-thumbnail"></a>
+			<a href="https://jaesik.info/lab"><img src="source/images/lab_logo_white.jpeg" class="img-thumbnail"></a>
 		</div>
 		<div class="col-lg-9">
 			<h2>Jaesik Park</h2>
